# agentic-qi

./: .env  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  SERVICES.md  SHARED_CONTEXT.md  bd-tasks.md  create-bd-tasks.sh  docker-compose.yml  package-lock.json  package.json  setup-monorepo.sh  test_grpc_apis.py
.beads/: issues.jsonl
agents/ecommerce-domain-agent/: .gitignore  Makefile  PHASE_1_SUMMARY.md  PHASE_2_SUMMARY.md  PHASE_3_SUMMARY.md  PHASE_4_SUMMARY.md  PROJECT_STATUS.md  README.md  docker-compose.yml  ecommerce_prd.md  ecommerce_tasks.md  ecommerce_tasks_status.md  extract_knowledge_to_files.py  inter_agent_issues.md  inter_agent_protocol.md  seed_knowledge_base.py  test_knowledge_api.py  test_weaviate_search.py  test_weaviate_simple.py  test_weaviate_v4.py  verify_installation.sh  verify_weaviate.py
agents/ecommerce-domain-agent/knowledge_base/: README.md
agents/ecommerce-domain-agent/service/: .env.example  Dockerfile  README.md  pyproject.toml  test_server.py
agents/ecommerce-domain-agent/service/docs/: GRPC_API.md
agents/ecommerce-domain-agent/service/protos/: ecommerce_domain.proto
agents/ecommerce-domain-agent/service/src/ecommerce_agent/: __init__.py  config.py  main.py
agents/ecommerce-domain-agent/service/src/ecommerce_agent/clients/: __init__.py  defect_analyzer.py  test_case_generator.py  test_data_client.py  weaviate_client.py
agents/ecommerce-domain-agent/service/src/ecommerce_agent/context/: __init__.py  builder.py
agents/ecommerce-domain-agent/service/src/ecommerce_agent/domain/: __init__.py  business_rules.py  edge_cases.py  entities.py  workflows.py
agents/ecommerce-domain-agent/service/src/ecommerce_agent/enrichment/: __init__.py  enricher.py
agents/ecommerce-domain-agent/service/src/ecommerce_agent/inter_agent/: reporter.py
agents/ecommerce-domain-agent/service/src/ecommerce_agent/knowledge/: __init__.py  collections.py  documents.py  indexer.py  retriever.py  seed_knowledge.py
agents/ecommerce-domain-agent/service/src/ecommerce_agent/orchestrator/: __init__.py  business_rules.py  defects.py  generator.py  journey_monitoring.py  schema_builder.py  test_cases.py
agents/ecommerce-domain-agent/service/src/ecommerce_agent/proto/: __init__.py
agents/ecommerce-domain-agent/service/src/ecommerce_agent/server/: __init__.py  api.py  grpc_server.py  grpc_server_enhanced.py  health.py  knowledge_api.py
agents/ecommerce-domain-agent/service/src/ecommerce_agent/utils/: logging.py
agents/ecommerce-domain-agent/service/tests/: __init__.py  conftest.py  test_business_rules.py  test_knowledge_api.py  test_knowledge_retriever.py  test_phase4_integration.py  test_weaviate_client.py
agents/ecommerce-domain-agent/service/tests/unit/: test_config.py  test_domain.py  test_enricher.py  test_grpc_server.py  test_health.py  test_knowledge.py  test_orchestrator.py
agents/ecommerce-domain-agent/ui/: next.config.js  package-lock.json  package.json  tailwind.config.ts
agents/requirement-analysis-agent/: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
agents/requirement-analysis-agent/docs/: requirement_analysis_agent_prd.md
agents/requirement-analysis-agent/tests/: __init__.py  conftest.py
agents/test-cases-agent/: .env.example  .gitignore  Dockerfile  README.md  grpcurl_commands.md  pyproject.toml  test_client.py  test_request.json  test_simple.py
agents/test-cases-agent/.beads/: issues.jsonl
agents/test-cases-agent/docs/: PRD.md  PROJECT_COMPLETION_SUMMARY.md  TASKS.md  styles.md
agents/test-cases-agent/docs/phase_summaries/: phase_0_summary.md  phase_1_summary.md  phase_2_summary.md  phase_3_4_summary.md  phase_5_6_summary.md
agents/test-cases-agent/src/test_cases_agent/: __init__.py  __main__.py  config.py  main.py
agents/test-cases-agent/src/test_cases_agent/clients/: __init__.py  domain_agent_client.py  test_data_agent_client.py
agents/test-cases-agent/src/test_cases_agent/generation/: __init__.py  coverage_analyzer.py  engine.py  formatter.py  parser.py  prompt_builder.py
agents/test-cases-agent/src/test_cases_agent/generation/templates/: base.j2
agents/test-cases-agent/src/test_cases_agent/knowledge/: __init__.py  history_repository.py  retriever.py  weaviate_client.py
agents/test-cases-agent/src/test_cases_agent/llm/: __init__.py  anthropic_client.py  anthropic_simple.py  base.py  gemini_client.py  openai_client.py  router.py
agents/test-cases-agent/src/test_cases_agent/models/: __init__.py  test_case.py
agents/test-cases-agent/src/test_cases_agent/proto/: ecommerce_domain_pb2.py  ecommerce_domain_pb2.pyi  ecommerce_domain_pb2_grpc.py  test_cases_pb2.py  test_cases_pb2.pyi  test_cases_pb2_grpc.py  test_data_pb2.py  test_data_pb2.pyi  test_data_pb2_grpc.py
agents/test-cases-agent/src/test_cases_agent/proto/protos/: test_cases_pb2.py  test_cases_pb2_grpc.py
agents/test-cases-agent/src/test_cases_agent/server/: service.py
agents/test-cases-agent/src/test_cases_agent/utils/: logging.py
agents/test-cases-agent/tests/: conftest.py
agents/test-cases-agent/tests/unit/: test_agent_clients.py  test_knowledge_layer.py  test_llm_base.py  test_llm_router.py  test_models.py  test_parser.py
docs/ADR/: 001-monorepo-structure.md
docs/frontend/: DEVELOPMENT.md  FRONTEND_REQUIREMENTS.md  INTEGRATION.md  PRD.md
envoy/: envoy.yaml  envoy_updated.yaml
frontend/: Dockerfile  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json
frontend/__tests__/hooks/: useAnalytics.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/developers/: page.tsx
frontend/app/ecommerce/: page.tsx
frontend/components/: AgentCard.tsx
frontend/docs/: analytics_dashboard_prd.md  test-data-agent-prd.md  test-data-agent-tasks.md
frontend/hooks/: useAnalytics.ts  useGenerateTestCases.ts
frontend/scripts/: generate-proto.sh
protos/: ecommerce_domain.proto  requirement_analysis.proto  test_cases.proto  test_data.proto
scripts/: start-all.sh  stop-all.sh
(+172 files in other folders)
