[project]
name = "ecommerce-domain-agent"
version = "0.1.0"
description = "eCommerce Domain Agent for QA Intelligence Platform"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "fastapi>=0.127.0",
    "uvicorn>=0.38.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.8.1",
    "anthropic>=0.75.0",
    "weaviate-client>=4.19.0",
    "structlog>=25.5.0",
    "prometheus-client>=0.22.1",
    "opentelemetry-api>=1.32.1",
    "opentelemetry-sdk>=1.32.1",
    "opentelemetry-exporter-otlp>=1.32.1",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "black>=25.1.0",
    "ruff>=0.11.12",
    "mypy>=1.16.0",
    "grpcio-testing>=1.76.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "N", "W"]